--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -30,10 +30,10 @@
         <form id="menuForm" class="menu-flx">
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr"> Size:</h2>
-                <input class="size" type="radio" name="size" onclick="processOrder()" value="Personal" checked> Personal<br>
-                <input class="size" type="radio" name="size" onclick="processOrder()"value="Medium"> Medium<br>
-                <input class="size" type="radio" name="size" onclick="processOrder()"value="Large"> Large<br>
-                <input class="size" type="radio" name="size" onclick="processOrder()"value="Extra Large"> Extra Large<br>
+                <input name="size" type="radio" name="size" onclick="processOrder()" value="Personal" checked> Personal<br>
+                <input name="size" type="radio" name="size" onclick="processOrder()"value="Medium"> Medium<br>
+                <input name="size" type="radio" name="size" onclick="processOrder()"value="Large"> Large<br>
+                <input name="size" type="radio" name="size" onclick="processOrder()"value="Extra Large"> Extra Large<br>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Crust:</h2>
