--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -28,51 +28,51 @@
         <form id="menuForm" class="menu-flx">
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Size:</h2>
-                <input type="radio" name="size" onclick="processOrder()" value="Personal" checked> Personal<br>
-                <input type="radio" name="size" onclick="processOrder()" value="Medium"> Medium<br>
-                <input type="radio" name="size" onclick="processOrder()" value="Large"> Large<br>
-                <input type="radio" name="size" onclick="processOrder()" value="Extra Large"> Extra Large<br>
+                <label><input type="radio" name="size" onclick="processOrder()" value="Personal" checked> Personal</label>
+                <label><input type="radio" name="size" onclick="processOrder()" value="Medium"> Medium</label>
+                <label><input type="radio" name="size" onclick="processOrder()" value="Large"> Large</label>
+                <label><input type="radio" name="size" onclick="processOrder()" value="Extra Large"> Extra Large</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Crust:</h2>
-                <input type="radio" name="crust" onclick="processOrder()" value="Plain" checked> Plain<br>
-                <input type="radio" name="crust" onclick="processOrder()" value="Garlic Butter"> Garlic Butter<br>
-                <input type="radio" name="crust" onclick="processOrder()" value="Cheese Stuffed"> Cheese Stuffed<br>
-                <input type="radio" name="crust" onclick="processOrder()" value="Spicy"> Spicy<br>
-                <input type="radio" name="crust" onclick="processOrder()" value="House Special"> House Special<br>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="Plain" checked> Plain</label>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="Garlic Butter"> Garlic Butter</label>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="Cheese Stuffed"> Cheese Stuffed</label>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="Spicy"> Spicy</label>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="House Special"> House Special</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Sauce:</h2>
-                <input type="radio" name="sauce" onclick="processOrder()" value="Marinara Sauce" checked> Marinara Sauce<br>
-                <input type="radio" name="sauce" onclick="processOrder()" value="White Sauce"> White Sauce<br>
-                <input type="radio" name="sauce" onclick="processOrder()" value="BBQ Sauce"> BBQ Sauce<br>
-                <input type="radio" name="sauce" onclick="processOrder()" value="No Sauce"> No Sauce<br>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="Marinara Sauce" checked> Marinara Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="White Sauce"> White Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="BBQ Sauce"> BBQ Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="No Sauce"> No Sauce</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Cheese:</h2>
-                <input type="radio" name="cheese" onclick="processOrder()" value="No Cheese" checked> No Cheese<br>
-                <input type="radio" name="cheese" onclick="processOrder()" value="Regular Cheese"> Regular Cheese<br>
-                <input type="radio" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese<br>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="No Cheese" checked> No Cheese</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Regular Cheese"> Regular Cheese</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Meats:</h2>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Pepperoni"> Pepperoni<br>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Sausage"> Sausage<br>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Canadian Bacon"> Canadian Bacon<br>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Ground Beef"> Ground Beef<br>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Anchovy"> Anchovy<br>
-                <input type="checkbox" name="meat" onclick="processOrder()" value="Chicken"> Chicken<br>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Pepperoni"> Pepperoni</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Sausage"> Sausage</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Canadian Bacon"> Canadian Bacon</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Ground Beef"> Ground Beef</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Anchovy"> Anchovy</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Chicken"> Chicken</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Veggies:</h2>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Tomatoes"> Tomatoes<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Onions"> Onions<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Olives"> Olives<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Green Peppers"> Green Peppers<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Mushrooms"> Mushrooms<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Pineapple"> Pineapple<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Spinach"> Spinach<br>
-                <input type="checkbox" name="veggies" onclick="processOrder()" value="Jalapeno"> Jalapeno<br>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Tomatoes"> Tomatoes</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Onions"> Onions</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Olives"> Olives</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Green Peppers"> Green Peppers</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Mushrooms"> Mushrooms</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Pineapple"> Pineapple</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Spinach"> Spinach</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Jalapeno"> Jalapeno</label>
             </div>
         </form>
         <br>
