--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -39,20 +39,27 @@
                 <label><input type="radio" name="crust" onclick="processOrder()" value="Garlic Butter"> Garlic Butter</label>
                 <label><input type="radio" name="crust" onclick="processOrder()" value="Cheese Stuffed"> Cheese Stuffed</label>
                 <label><input type="radio" name="crust" onclick="processOrder()" value="Spicy"> Spicy</label>
-                <label><input type="radio" name="crust" onclick="processOrder()" value="House Special"> House Special</label>
+                <label><input type="radio" name="crust" onclick="processOrder()" value="Gluten Free"> Gluten Free</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Sauce:</h2>
-                <label><input type="radio" name="sauce" onclick="processOrder()" value="Marinara Sauce" checked> Marinara Sauce</label>
-                <label><input type="radio" name="sauce" onclick="processOrder()" value="White Sauce"> White Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="No Sauce" checked> No Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="Marinara Sauce"> Marinara Sauce</label>
+                <label><input type="radio" name="sauce" onclick="processOrder()" value="Pesto Sauce"> Pesto Sauce</label>
                 <label><input type="radio" name="sauce" onclick="processOrder()" value="BBQ Sauce"> BBQ Sauce</label>
-                <label><input type="radio" name="sauce" onclick="processOrder()" value="No Sauce"> No Sauce</label>
+                <h2 class="menu-cell-hdr">Extras:</h2>
+                <label><input type="checkbox" name="sauce" onclick="processOrder()" value="Fresh Garlic"> Fresh Garlic</label>
+                <label><input type="checkbox" name="sauce" onclick="processOrder()" value="Red Peppr Flakes"> Red Peppr Flakes</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Cheese:</h2>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="No Cheese" checked> No Cheese</label>
-                <label><input type="radio" name="cheese" onclick="processOrder()" value="Regular Cheese"> Regular Cheese</label>
-                <label><input type="radio" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Mozzerella"> Mozzerella</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Provolone"> Provolone</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Goat"> Goat</label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya </label>
+                <label><input type="checkbox" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese</label>
+                <label><input type="checkbox" name="cheese" onclick="processOrder()" value="Parmesan"> Parmesan</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Meats:</h2>
@@ -60,19 +67,19 @@
                 <label><input type="checkbox" name="meat" onclick="processOrder()" value="Sausage"> Sausage</label>
                 <label><input type="checkbox" name="meat" onclick="processOrder()" value="Canadian Bacon"> Canadian Bacon</label>
                 <label><input type="checkbox" name="meat" onclick="processOrder()" value="Ground Beef"> Ground Beef</label>
-                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Anchovy"> Anchovy</label>
                 <label><input type="checkbox" name="meat" onclick="processOrder()" value="Chicken"> Chicken</label>
+                <label><input type="checkbox" name="meat" onclick="processOrder()" value="Smoked Chicken"> Smoked Chicken</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Veggies:</h2>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Tomatoes"> Tomatoes</label>
-                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Onions"> Onions</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Red Onions"> Red Onions</label>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Olives"> Olives</label>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Green Peppers"> Green Peppers</label>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Mushrooms"> Mushrooms</label>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Pineapple"> Pineapple</label>
                 <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Spinach"> Spinach</label>
-                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Jalapeno"> Jalapeno</label>
+                <label><input type="checkbox" name="veggies" onclick="processOrder()" value="Artichoke"> Artichoke</label>
             </div>
         </form>
         <br>
