--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -57,9 +57,9 @@
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Mozzerella"> Mozzerella</label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Provolone"> Provolone</label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Goat"> Goat</label>
-                <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya </label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Cheddar"> Cheddar </label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya (non-dairy) </label>
                 <label><input type="checkbox" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese</label>
-                <label><input type="checkbox" name="cheese" onclick="processOrder()" value="Parmesan"> Parmesan</label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Meats:</h2>
