tooltips for extra cheese

--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -59,7 +59,11 @@
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Goat"> Goat</label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Cheddar"> Cheddar </label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya (non-dairy) </label>
-                <label><input id="extra-cheese" type="checkbox" name="cheese" onclick="processOrder()" value="Extra Cheese"> Extra Cheese</label>
+                <label class="tooltip">
+                    <input id="extra-cheese" type="checkbox" name="cheese"  onclick="processOrder();" value="Extra Cheese">
+                     Extra Cheese
+                    <span class="tooltiptext">Select a cheese first</span>
+                </label>
             </div>
             <div class="menu-cell">
                 <h2 class="menu-cell-hdr">Meats:</h2>
