--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pizza Heaven</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,11 +14,13 @@
 <body>
  
     <!----------------------------- HEADER --------------------------------->
-    <header class=header-bg>
-        <div class=wings-bg> 
-            <div class="pizza-halo"></div>
-            <h1><strong>PIZZA HEAVEN</strong></h1>
-        </div>
+    <header class="header-flex">
+        <!-- <div class="pizza-halo"></div> -->
+        <div class="wings-bg-l  leftwing"> </div> 
+        <div class="wings-bg-r  rightwing"> </div> 
+        <img src='./img/halo.png' class="pizza-halo">
+            <!-- <div class="wings-bg rightwing"> </div>  -->
+        <h1 class="header-h1"><strong>PIZZA HEAVEN</strong></h1>
     </header>
     
     <!----------------------------- MAIN MENU ----------------------------------->
