--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -60,7 +60,7 @@
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Provolone"> Provolone</label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Goat"> Goat</label>
                 <label><input type="radio" name="cheese" onclick="processOrder()" value="Cheddar"> Cheddar </label>
-                <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya (non-dairy) </label>
+                <label><input type="radio" name="cheese" onclick="processOrder()" value="Daiya"> Daiya (nondairy) </label>
                 <label class="tool-tip">
                     <input id="extra-cheese" type="checkbox" name="cheese"  onclick="processOrder();" value="Extra Cheese">
                      Extra Cheese
@@ -92,7 +92,8 @@
 
         <!----------------------------- CONTROLS ----------------------------------->
         <div class="menu-flx">
-            <div class="button" onclick="processOrder()">
+            <!-- when clicked, go to where the total price is displayed -->
+            <div class="button" onclick="location.href='#tot-prc'">
                 <p><strong>PLACE ORDER</strong></p>
             </div>
             <div class="button" onclick="clearSelections()">
