--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -97,9 +97,9 @@
             <!-- when clicked, go to where the total price is displayed -->
             <!-- <div class="button" onclick="location.href='#tot-prc'"> -->
             <!-- <div class="button" onclick="scrollToTotal()"> -->
-            <!-- <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ 
-                    behavior: 'smooth' });"> -->
-            <div class="button" onclick="smoothScroll('tot-prc', 800)">
+            <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ 
+                    behavior: 'smooth' });">
+            <!-- <div class="button" onclick="smoothScroll('tot-prc', 800)"> -->
                 <p><strong>PLACE ORDER</strong></p>
             </div>
             <div class="button" onclick="clearSelections()">
