--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -97,9 +97,8 @@
             <!-- when clicked, go to where the total price is displayed -->
             <!-- <div class="button" onclick="location.href='#tot-prc'"> -->
             <!-- <div class="button" onclick="scrollToTotal()"> -->
-            <!-- <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ 
-                    behavior: 'smooth' });"> -->
-            <div class="button" onclick="smoothScroll('tot-prc-hdr', 500)">
+            <!-- <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ behavior: 'smooth' });"> -->
+            <div class="button" onclick="smoothScroll('tot-prc-hdr', 400)">
             <!-- <div class="button"> -->
             <!-- <div class="button" onclick="checkIfInView(document.getElementById('tot-prc'))"> -->
                 <p><strong>PLACE ORDER</strong></p>
