--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -98,10 +98,10 @@
             <!-- <div class="button" onclick="location.href='#tot-prc'"> -->
             <!-- <div class="button" onclick="scrollToTotal()"> -->
             <!-- <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ behavior: 'smooth' });"> -->
-            <div class="button" onclick="smoothScroll('tot-prc-hdr', 400)">
+            <div class="button" onclick="scrollUntilVisible('tot-prc-hdr', 800)">
             <!-- <div class="button"> -->
             <!-- <div class="button" onclick="checkIfInView(document.getElementById('tot-prc'))"> -->
-                <p><strong>PLACE ORDER</strong></p>
+                <p><strong>VIEW PRICE</strong></p>
             </div>
             <div class="button" onclick="clearSelections()">
                 <p><strong>CANCEL</strong></p>
