restart wings animation

--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -20,7 +20,7 @@
         <!-- <div class="pizza-halo"></div> -->
         <div class="wings-bg-l  leftwing"> </div> 
         <div class="wings-bg-r  rightwing"> </div> 
-        <img src='./img/halo.png' class="pizza-halo">
+        <img src='./img/halo.png' id="restart" class="pizza-halo">
             <!-- <div class="wings-bg rightwing"> </div>  -->
         <h1 class="header-h1"><strong>PIZZA HEAVEN</strong></h1>
     </header>
