Added optional offset to scroll until visible function

--- a/Project Pizza/index.html
+++ b/Project Pizza/index.html
@@ -98,7 +98,7 @@
             <!-- <div class="button" onclick="location.href='#tot-prc'"> -->
             <!-- <div class="button" onclick="scrollToTotal()"> -->
             <!-- <div class="button" onclick="document.getElementById('tot-prc').scrollIntoView({ behavior: 'smooth' });"> -->
-            <div class="button" onclick="scrollUntilVisible('tot-prc-hdr', 800)">
+            <div class="button" onclick="scrollUntilVisible('tot-prc-hdr', 800, 10)">
             <!-- <div class="button"> -->
             <!-- <div class="button" onclick="checkIfInView(document.getElementById('tot-prc'))"> -->
                 <p><strong>VIEW PRICE</strong></p>
